--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-title: John Doe
-bio: A Person who travels the world eating noodles
+title: Joan Grèbol Tomàs
+bio: PhD candidate in computational and theoretical chemistry
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -20,13 +20,10 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
+url: https://jgrebol.github.io
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
-
-# To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
@@ -40,20 +37,6 @@ instagram: myinstagram
 linkedin: mylinkedin
 github: mygithub
 email: myemail@gmail.com
-
-authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
-    external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
